--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ img {
   width: 50%;
 }
 
+.image {
+  margin-bottom: 200px;
+}
 div{
   margin-bottom: 100px;;
 }
@@ -28,11 +31,11 @@ header {
 }
 
 h1 {
+  font-family: 'Gloock', serif;
   letter-spacing: 5px;
 }
 
 nav {
-  font-family: 'Space Grotesk', sans-serif;
   text-align: center;
   padding: 50px;
   margin-bottom: 100px;
@@ -42,8 +45,35 @@ nav {
 }
 
 a {
+  font-family: 'Space Grotesk', sans-serif;
   color:#efd433;
   background-color:#92000b ;
   border-radius: 10px;
   padding: 10px;
+
+}
+
+h2 {
+  font-family: 'Gloock', serif;
+  text-align: center;
+  color:#efd433;
+  background-color: #92000b;
+  border-radius: 50px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+p {
+  color:#efd433;
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+.footer {
+  display: flex;
+}
+
+.element {
+  width: 200%;
+  height: 200%;
+  clip-path: polygon(0% 0%, 100% 11%, 100% 50%, 24% 100%, 0% 100%);
 }
