--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,7 @@ img {
   display: block;
   width: 50%;
 }
-/*
-atención, sacar o corregir class d .image 
-*/
-.image {
-  margin-bottom: 200px;
-}
+
 
 div{
   margin-bottom: 100px;
@@ -36,7 +31,6 @@ header {
 h1 {
   font-family: 'Gloock', serif;
   letter-spacing: 5px;
-  border: solid 3px #efd433 ;
   padding-top:  10px; ;
   padding-bottom: 10px;
 }
@@ -125,4 +119,11 @@ footer {
   background-size: cover;
   background-repeat:no-repeat;
   background-position:right;
+}
+.japanese {
+  border: solid 3px #efd433 ;
+  padding-top:  10px; ;
+  padding-bottom: 10px;
+  font-family: Glook, serif;
+  block-size: auto;
 }
